[package]
name = "poly-ring-xnp1"
version = "0.1.0"
authors = ["AlvinHon <alvin.cpp@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlvinHon/poly-ring"
description = "Library for arithmetics in Polynomial ring Z[x]/(x^n+1) for lattice-based cryptography"


[lib]
name = "poly_ring_xnp1"
path = "src/lib.rs"

[dependencies]
num = "0.4"

[dev-dependencies]
rand = "0.8.5"
polynomial-ring = "0.5.0"
criterion = "0.5"

[[bench]]
name = "bench"
harness = false