[package]
name = "poly-ring-xnp1"
version = "0.3.3"
authors = ["AlvinHon <alvin.cpp@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlvinHon/poly-ring"
description = "Polynomial ring Z[x]/(x^n+1) for lattice-based cryptography"


[lib]
name = "poly_ring_xnp1"
path = "src/lib.rs"


[features]
default = []
zq = []
rand = ["dep:rand"]
serde = ["dep:serde"]

[dependencies]
num = "0.4"
rand = {version = "0.10", optional=true}
serde = {version="1.0", optional=true}

[dev-dependencies]
abstalg = "0.2.0"
bincode = "1.3.3"
rand = "0.10"
polynomial-ring = "0.5.0"
criterion = "0.8"

[[bench]]
name = "bench"
harness = false